test/files/neg/annot-nonconst.check
annot-nonconst.scala:5: error: attribute argument needs to be a constant; found: Test.this.n
  @Length(n) def foo = "foo"
          ^
one error found
